--- a/admin/loginadmin.html
+++ b/admin/loginadmin.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="loginadmin.css">
     <title>Connexion</title>
-    <link href="./../assets/img/favicon.svg" rel="icon">
+    <link href="./../assets/img/myevents299.jpeg" rel="icon">
 </head>
 <body>
     <div class="login-page">
