--- a/events-details.html
+++ b/events-details.html
@@ -9,7 +9,7 @@
     <meta content="" name="keywords">
 
     <!-- Favicons -->
-    <link href="assets/img/favicon.svg" rel="icon">
+    <link href="assets/img/myevents299.jpeg" rel="icon">
     <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
 
     <!-- Google Fonts -->
@@ -34,7 +34,10 @@
     <!-- ======= Header ======= -->
     <header id="header" class="fixed-top header-inner-pages">
       <div class="container d-flex align-items-center justify-content-between">
-        <h1 class="logo"><a href="index.html"><img src="assets/img/mylogo1.jpeg" class="img-fluid animated" alt=""></a></h1>
+        <h1 class="logo"><a href="index.html">
+          <img src="assets/img/myevents299.jpeg" class="img-fluid animated" alt=""
+          style="width: 17vh; height: 12vh; border-radius: 5px;">
+        </a></h1>
         <nav id="navbar" class="navbar">     
             <ul>
               <li><a class="nav-link scrollto active" href="index.html">Accueil</a></li>
@@ -88,12 +91,13 @@
           <div class="row">
   
             <div class="col-lg-4 col-md-6 footer-contact">
-              <h3><img src="assets/img/mylogo1.jpeg" class="img-fluid animated" alt=""></h3>
+              <h3><img src="assets/img/myevents299.jpeg" class="img-fluid animated" alt=""
+                style="width: 26vh; height: 18vh; border-radius: 5px;"></h3>
               <p>
                Cotonou<br>
                Bénin <br>
-                <strong>Phone:</strong> +1 5589 55488 55<br>
-                <strong>Email:</strong> info@example.com<br>
+                <strong>Phone:</strong> +229 66 52 57 85<br>
+                <strong>Email:</strong> myevents229@gmail.com<br>
               </p>
             </div>
   
@@ -123,10 +127,10 @@
         <div class="copyright-wrap d-md-flex py-4">
           <div class="me-md-auto text-center text-md-start">
             <div class="copyright">
-              &copy; Copyright <strong><span>AU-PROGRAMME</span></strong>. All Rights Reserved
+              &copy; Copyright <strong><span>myevents229</span></strong>. All Rights Reserved
             </div>
             <div class="credits">
-              Designed by <a href="https://bootstrapmade.com/">AU-PROGRAMME</a>
+              Designed by <a href="">myevents229</a>
             </div>
           </div>
           <div class="social-links text-center text-md-right pt-3 pt-md-0">
@@ -168,13 +172,13 @@
 
     // Your web app's Firebase configuration
     const firebaseConfig = {
-      apiKey: "AIzaSyDNv561jOOEoLeB0tbWRLz2NKq-Vf31x0s",
-    authDomain: "o-programme.firebaseapp.com",
-    databaseURL: "https://o-programme-default-rtdb.firebaseio.com",
-    projectId: "o-programme",
-    storageBucket: "o-programme.appspot.com",
-    messagingSenderId: "327173970134",
-    appId: "1:327173970134:web:c40a53b5500d1adaa11177"
+      apiKey: "AIzaSyCjj9lfPecoKZsYxmFj3Xp9JdADHOFFP20",
+        authDomain: "myevents229-40d8e.firebaseapp.com",
+        databaseURL: "https://myevents229-40d8e-default-rtdb.firebaseio.com",
+        projectId: "myevents229-40d8e",
+        storageBucket: "myevents229-40d8e.appspot.com",
+        messagingSenderId: "92280528400",
+        appId: "1:92280528400:web:509c44ab9518574865f495"
     };
 
     // Initialize Firebase
@@ -204,6 +208,7 @@
         get(child(dbref, "Thedatas/" + UserConnectIdToBuy))
             .then((snapshot) => {
                 if (snapshot.exists()) {
+                  var photoDataUrl = 'data:image/png;base64,' + snapshot.val().RollNo;
                   document.getElementById('ticketselect').innerHTML = 
                   `
                   <div class="row gy-4">
@@ -212,7 +217,7 @@
                       <div class="swiper-wrapper align-items-center">
 
                         <div class="swiper">
-                          <img src="${snapshot.val().RollNo}" alt="" style="height: 90vh;">
+                          <img src="${photoDataUrl}" alt="" style="height: 90vh;">
                         </div>
                       </div>
                       <div class="swiper-pagination"></div>
