--- a/events.html
+++ b/events.html
@@ -245,7 +245,7 @@
              Cotonou<br>
              Bénin <br>
               <strong>Phone:</strong> +229 66 52 57 85<br>
-              <strong>Email:</strong> auprogramme4@gmail.com<br>
+              <strong>Email:</strong> myevents229@gmail.com<br>
             </p>
           </div>
 
