--- a/events-details.html
+++ b/events-details.html
@@ -96,7 +96,7 @@
               <p>
                Cotonou<br>
                Bénin <br>
-                <strong>Phone:</strong> +229 66 52 57 85<br>
+                <strong>Phone:</strong> +229 97 61 24 09, +229 43 27 52 74<br>
                 <strong>Email:</strong> myevents229@gmail.com<br>
               </p>
             </div>
