--- a/events.html
+++ b/events.html
@@ -75,7 +75,7 @@
               <div class="faq-list">
                 <ul>
                   <li data-aos="fade-up" data-aos="fade-up" data-aos-delay="100">
-                      <i class="bi bi-calendar2-check-fill icon-help" style="font-size: 16px;"></i><a data-bs-toggle="collapse" class="collapse" data-bs-target="#faq-list-1">Avec AU-PROGRAMME, Vivez les moments forts des événements disponibles au Bénin.<i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
+                      <i class="bi bi-calendar2-check-fill icon-help" style="font-size: 16px;"></i><a data-bs-toggle="collapse" class="collapse" data-bs-target="#faq-list-1">Avec myevents229, Vivez les moments forts des événements disponibles au Bénin.<i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
                     <div id="faq-list-1" class="collapse show" data-bs-parent=".faq-list">
                         <p>Veuillez défiler vers l'événement qui vous plaît à assister.</p>
                     </div>
@@ -125,7 +125,7 @@
               <div class="info-box  mb-4">
                 <i class="bx bx-phone-call"></i>
                 <h3>Téléphone</h3>
-                <p>+229 66 52 57 85</p>
+                <p>+229 97 61 24 09 <br> +229 43 27 52 74</p>
               </div>
             </div>
   
@@ -182,14 +182,14 @@
                 <div class="modal-body">
                     <div class="icon-container1 d-flex">
                     <div class="smd">
-                      <a href="https://twitter.com/share?url=https://au-programme.netlify.app/events.html&text=Regardez%20les%20événements%20culturels%20et%20artistiques%20sur%20Au%20Programme%20!" target="_blank">
+                      <a href="https://twitter.com/share?url=https://myevents229.netlify.app/events.html&text=Regardez%20les%20événements%20culturels%20et%20artistiques%20sur%20Au%20Programme%20!" target="_blank">
                           <i class=" img-thumbnail fab fa-twitter fa-2x"
                               style="color:#4c6ef5;background-color: aliceblue"></i>
                           <p>Twitter</p>              
                       </a>
                     </div>
                     <div class="smd">
-                        <a href="https://www.facebook.com/sharer.php?u=https://au-programme.netlify.app/events.html" target="_blank">                        
+                        <a href="https://www.facebook.com/sharer.php?u=https://myevents229.netlify.app/events.html" target="_blank">                        
                             <i class="img-thumbnail fab fa-facebook fa-2x"
                                 style="color: #3b5998;background-color: #eceff5;"></i>
                             <p>Facebook</p>                      
@@ -199,14 +199,14 @@
 
                     <div class="icon-container2 d-flex">
                       <div class="smd">
-                      <a href="whatsapp://send?text=https://au-programme.netlify.app/events.html" data-action="share/whatsapp/share" target="_blank">                      
+                      <a href="whatsapp://send?text=https://myevents229.netlify.app/events.html" data-action="share/whatsapp/share" target="_blank">                      
                           <i class="img-thumbnail fab fa-whatsapp fa-2x"
                               style="color:  #25D366;background-color: #cef5dc;"></i>
                           <p>Whatsapp</p>  
                       </a>
                     </div> 
                     <div class="smd">
-                        <a href="https://www.linkedin.com/shareArticle?url=https://au-programme.netlify.app/events.html&title=Événements%20sur%20Au%20Programme&summary=Découvrez%20les%20événements%20culturels%20et%20artistiques%20proposés%20par%20Au%20Programme" target="_blank">
+                        <a href="https://www.linkedin.com/shareArticle?url=https://myevents229.netlify.app/events.html&title=Événements%20sur%20Au%20Programme&summary=Découvrez%20les%20événements%20culturels%20et%20artistiques%20proposés%20par%20Au%20Programme" target="_blank">
                           
                             <i class="img-thumbnail fab fa-linkedin fa-2x"
                                 style="color:  #4c6ef5;background-color: aliceblue"></i>
@@ -244,7 +244,7 @@
             <p>
              Cotonou<br>
              Bénin <br>
-              <strong>Phone:</strong> +229 66 52 57 85<br>
+              <strong>Phone:</strong> +229 97 61 24 09, +229 43 27 52 74<br>
               <strong>Email:</strong> myevents229@gmail.com<br>
             </p>
           </div>
