--- a/index.html
+++ b/index.html
@@ -580,7 +580,7 @@
             <div class="info-box  mb-4">
               <i class="bx bx-phone-call"></i>
               <h3>Téléphone</h3>
-              <p>+229 66 52 57 85</p>
+              <p>+229 97 61 24 09 <br> +229 43 27 52 74</p>
             </div>
           </div>
 
@@ -699,7 +699,7 @@
             <p>
              Cotonou<br>
              Bénin <br>
-              <strong>Phone:</strong> +229 66 52 57 85<br>
+              <strong>Phone:</strong> +229 97 61 24 09, +229 43 27 52 74<br>
               <strong>Email:</strong> myevents229@gmail.com<br>
             </p>
           </div>
